tests/compile_fail/as_mut/unknown_field_attr_arg.stderr
error: only `forward` or `skip`/`ignore` allowed here
 --> tests/compile_fail/as_mut/unknown_field_attr_arg.rs:3:14
  |
3 |     #[as_mut(baz)]
  |              ^^^
